- merged most recent java 11 version to java 8 version