@@ -2,17 +2,15 @@ package hzt.sequences;
 
 import hzt.collections.MapX;
 import hzt.collections.MutableMapX;
-import hzt.tuples.Pair;
 import hzt.utils.It;
-import org.jetbrains.annotations.NotNull;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.Month;
 import java.time.Year;
-import java.util.Set;
+import java.util.Arrays;
+import java.util.HashSet;
 
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -24,22 +22,22 @@ class EntrySequenceTest {
     void testfilterValuesAndMapValues() {
         final MapX<String, Integer> mapX = MapX.of("1", 1, "2", 2, "3", 3, "4", 4);
 
-        final MapX<LocalDate, String> resultMap = mapX.asSequence()
+        final MapX<String, LocalDate> resultMap = mapX.asSequence()
                 .filterValues(value -> value <= 3)
                 .mapValues(day -> LocalDate.of(2000, Month.JANUARY, day))
                 .toMapX();
 
         assertAll(
                 () -> assertEquals(3, resultMap.size()),
-                () -> assertEquals(Set.of("1", "2", "3"), resultMap.keySet())
+                () -> assertEquals(new HashSet<>(Arrays.asList("1", "2", "3")), resultMap.keySet())
         );
     }
 
     @Test
     void testMapValuesBothByKeyAndValue() {
-        final var map = MapX.of("1", 1, "2", 2, "3", 3, "4", 4);
+        final MapX<String, Integer> map = MapX.of("1", 1, "2", 2, "3", 3, "4", 4);
 
-        final var resultMap = map.asSequence()
+        final MapX<String, LocalDate> resultMap = map.asSequence()
                 .filterValues(value -> value <= 3)
                 .mapValues((month, day) -> LocalDate.of(2000, Month.of(Integer.parseInt(month)), day))
                 .toMapX();
